--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1257,7 +1257,7 @@ body.is-loading #bg:before {
 @media screen and (max-width: 1680px) {
     #wrapper {
         padding: 3rem 2rem;
-        background-image: url("https://cdn.securelist.com/files/2011/06/498.png")
+        background-image: url("https://cdn.wallpapersafari.com/59/56/OIKtYn.jpg")
     }
 }
 
