--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1200,7 +1200,7 @@ button {
     -webkit-transition: -webkit-transform 0.325s ease-in-out, -webkit-filter 0.325s ease-in-out;
     -ms-transition: -ms-transform 0.325s ease-in-out, -ms-filter 0.325s ease-in-out;
     transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out;
-    background-image: url("../../images/bg.jpg");
+    background-image: url("https://raw.githubusercontent.com/TheRoyalBlock/meteorology/gh-pages/images/bg.png");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -1257,7 +1257,7 @@ body.is-loading #bg:before {
 @media screen and (max-width: 1680px) {
     #wrapper {
         padding: 3rem 2rem;
-        background-image: url("https://cdn.wallpapersafari.com/59/56/OIKtYn.jpg")
+        background-image: url("https://raw.githubusercontent.com/TheRoyalBlock/meteorology/gh-pages/images/bg.png")
     }
 }
 
